PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/Contract__c.object-meta.xml
<CustomObject>
    <label>Contract</label>
    <nameField>
        <label>계약명</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>