PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/Amount_Payable__c.field-meta.xml
<CustomField>
    <fullName>Amount_Payable__c</fullName>
    <label>지급예정금액</label>
    <summarizedField>subcontracting_contract__c.ru_Balance__c</summarizedField>
    <summaryForeignKey>subcontracting_contract__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>