PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/BusinessType__c.field-meta.xml
<CustomField>
    <fullName>BusinessType__c</fullName>
    <label>사업유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>O&amp;M</fullName>
            </value>
            <value>
                <fullName>IMP</fullName>
            </value>
            <value>
                <fullName>LIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>