PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/CollectionAmount_Summary__c.field-meta.xml
<CustomField>
    <fullName>CollectionAmount_Summary__c</fullName>
    <label>청구금액(매출합계)</label>
    <summarizedField>Billing__c.BillingAmount__c</summarizedField>
    <summaryFilterItems>
        <field>Billing__c.IsBilling__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Billing__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>