PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/ConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>ConfirmDate__c</fullName>
    <label>검수 일자</label>
    <type>Date</type>
</CustomField>