PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>계약 담당 연락처</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contract</relationshipName>
    <type>Lookup</type>
</CustomField>