PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/ContractClosed__c.field-meta.xml
<CustomField>
    <fullName>ContractClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>계약종료</label>
    <type>Checkbox</type>
</CustomField>