PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/ContractPeriod__c.field-meta.xml
<CustomField>
    <fullName>ContractPeriod__c</fullName>
    <formula>Text(StartDate__c) &amp;  &apos; ~ &apos; &amp;  Text(EndDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>계약기간</label>
    <type>Text</type>
</CustomField>