PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>계약종료일자</label>
    <type>Date</type>
</CustomField>