PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/fm_NetAmount__c.field-meta.xml
<CustomField>
    <fullName>fm_NetAmount__c</fullName>
    <formula>ru_Amount__c - fmOutsourcingFee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>순사업수익</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>