PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/fmOutsourcingFee__c.field-meta.xml
<CustomField>
    <fullName>fmOutsourcingFee__c</fullName>
    <label>외주비(매입용역)</label>
    <summarizedField>subcontracting_contract__c.ru_TotalAmount__c</summarizedField>
    <summaryForeignKey>subcontracting_contract__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>