PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/fmUnpaidAmount2__c.field-meta.xml
<CustomField>
    <fullName>fmUnpaidAmount2__c</fullName>
    <label>미지급금</label>
    <summarizedField>subcontracting_contract__c.fm_TotalRemainder__c</summarizedField>
    <summaryForeignKey>subcontracting_contract__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>