PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/IsContract__c.field-meta.xml
<CustomField>
    <fullName>IsContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>계약체결</label>
    <type>Checkbox</type>
</CustomField>