PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>영업기회</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipName>Contract</relationshipName>
    <type>Lookup</type>
</CustomField>