PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <label>지급금액</label>
    <summarizedField>subcontracting_contract__c.ru_PaidAmount__c</summarizedField>
    <summaryForeignKey>subcontracting_contract__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>