PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>지급방법</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>월 분할</fullName>
            </value>
            <value>
                <fullName>지정일자</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>