PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/QADate__c.field-meta.xml
<CustomField>
    <fullName>QADate__c</fullName>
    <label>하자 보증 기한</label>
    <type>Date</type>
</CustomField>