PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/ru_Amount__c.field-meta.xml
<CustomField>
    <fullName>ru_Amount__c</fullName>
    <label>계약 금액</label>
    <summarizedField>Billing__c.BillingDueAmount__c</summarizedField>
    <summaryForeignKey>Billing__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>