PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/ru_OutstandingFee__c.field-meta.xml
<CustomField>
    <fullName>ru_OutstandingFee__c</fullName>
    <label>미수금</label>
    <summarizedField>Billing__c.BillingAmount__c</summarizedField>
    <summaryFilterItems>
        <field>Billing__c.IsBilling__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billing__c.IsCollection__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Billing__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>