PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/ru_UnpaidAmount__c.field-meta.xml
<CustomField>
    <fullName>ru_UnpaidAmount__c</fullName>
    <label>미청구금액</label>
    <summarizedField>Billing__c.BillingDueAmount__c</summarizedField>
    <summaryFilterItems>
        <field>Billing__c.IsBilling__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Billing__c.Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>