PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/fields/SignDate__c.field-meta.xml
<CustomField>
    <fullName>SignDate__c</fullName>
    <label>계약일자</label>
    <type>Date</type>
</CustomField>