PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SignDate__c</columns>
    <columns>ContractPeriod__c</columns>
    <columns>ru_Amount__c</columns>
    <columns>fm_NetAmount__c</columns>
    <columns>CollectionAmount_Summary__c</columns>
    <columns>ru_UnpaidAmount__c</columns>
    <columns>ru_OutstandingFee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>