PA_Education/TestMenifest/force-app/main/default/objects/Contract__c/listViews/GoLive_Contract.listView-meta.xml
<ListView>
    <fullName>GoLive_Contract</fullName>
    <columns>NAME</columns>
    <columns>BusinessType__c</columns>
    <columns>SignDate__c</columns>
    <columns>ContractPeriod__c</columns>
    <columns>ru_Amount__c</columns>
    <columns>fm_NetAmount__c</columns>
    <columns>CollectionAmount_Summary__c</columns>
    <columns>ru_UnpaidAmount__c</columns>
    <columns>ru_OutstandingFee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ContractClosed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>진행중인 계약건</label>
</ListView>